--- a/Multimedia-embedding/html-tables/styles.css
+++ b/Multimedia-embedding/html-tables/styles.css
@@ -8,7 +8,9 @@ table {
   letter-spacing: 1px;
   font-size: 0.8rem;
 }
-
+colgroup {
+  background-color: darkkhaki;
+}
 td,
 th {
   border: 1px solid rgb(190, 190, 190);
